# crucible_graph_explorer

./: .dockerignore  .env.example  Dockerfile  README.md  cloudbuild.yaml  crucible_graph_explore_flask_app.py  crucible_project_graph.py  proj10k_tables.ipynb  pyproject.toml
flask_templates/: base.html  chat.html  dataset.html  entity_graph.html  index.html  mdnote_edit.html  project_list.html  project_overview.html  sample_graph.html  search.html  users.html
flask_templates/proj10k_templates/: overview.html  thinfilm-gallery.html
vite/: main.js  package.json  vite.config.js
vite/src/: mdnote-editor.js  sample-graph.js  styles.css
